argocd/destination-rule.yml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: argocd-server-https
spec:
  host: argocd-server.argocd.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 443
        tls:
          mode: SIMPLE
          insecureSkipVerify: true
